移植挖掘状态机与掉落守恒链到 1.12.2 / Port mining state and drop conservation to 1.12.2